# fair-test

./: LICENSE  README.md  test.py
fair-test/: README.md  pyproject.toml
fair-test/fair_test/: __init__.py  client_app.py  metrics.py  server_app.py  task.py
fair-test/fair_test/datasets/: cifar.py  compas.py  custom_dataset.py  mnist.py
fair-test/strategy/: fair_fed.py
